# SDL-app-skeleton

./: .gitignore  App  CMakeLists.txt  main.cpp
game_lib/: CMakeLists.txt  main.cpp
game_lib/headers/app/: UI.h
game_lib/headers/logic/: Game.h  Piece.h
game_lib/headers/scene_logic/: Scene.h  SceneManager.h
game_lib/headers/ui/: InputData.h  UI.h
game_lib/source/app/: ui_cleanup.cpp  ui_execute.cpp  ui_init.cpp  ui_input.cpp  ui_loadmedia.cpp  ui_loop.cpp  ui_render.cpp
game_lib/source/logic/: Game.cpp
game_lib/source/scene_logic/: Scene.cpp  SceneManager.cpp
game_lib/source/ui/: ui_execute.cpp  ui_init.cpp  ui_input.cpp  ui_loadmedia.cpp  ui_loop.cpp  ui_render.cpp
headers/logic/: MoveDirection.h
source/logic/: Game.cpp
tests/: CMakeLists.txt  GameTest.cpp
ui_lib/: CMakeLists.txt
ui_lib/headers/gui/: Node.h  Rectangle.h  gui.h
ui_lib/headers/resources/: global_resources.h
ui_lib/headers/scene_logic/: Scene.h  SceneManager.h
ui_lib/headers/scenes/: ExampleScene.h  ExampleSceneTwo.h
ui_lib/headers/ui/: InputData.h  UI.h
ui_lib/source/gui/: Node.cpp  Rectangle.cpp
ui_lib/source/logic/: Game.cpp
ui_lib/source/resources/: global_resources.cpp
ui_lib/source/scene_logic/: Scene.cpp
ui_lib/source/scenes/: ExampleScene.cpp  ExampleSceneTwo.cpp
ui_lib/source/ui/: ui_cleanup.cpp  ui_execute.cpp  ui_init.cpp  ui_input.cpp  ui_loadmedia.cpp  ui_loop.cpp  ui_render.cpp
